add: events CRUD
